Translations: Japanese translation update by Haruyuki Fujimaki, bugs 31929, 31930, 31931
 SVN 55137@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -7214,6 +7214,7 @@ languages/debuggerstrconst.es.po svneol=native#text/plain
 languages/debuggerstrconst.fr.po svneol=native#text/plain
 languages/debuggerstrconst.hu.po svneol=native#text/plain
 languages/debuggerstrconst.it.po svneol=native#text/plain
+languages/debuggerstrconst.ja.po svneol=native#text/plain
 languages/debuggerstrconst.lt.po svneol=native#text/plain
 languages/debuggerstrconst.po svneol=native#text/plain
 languages/debuggerstrconst.ru.po svneol=native#text/plain
