Docs: LCL. Fixes missing punctuation in short descriptions (partial).
 SVN 65267@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -6391,7 +6391,7 @@ docs/xml/lcl/postscriptunicode.xml svneol=native#text/plain
 docs/xml/lcl/printers.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/propertystorage.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/registerlcl.xml svneol=native#text/plain
-docs/xml/lcl/replacedlgunit.xml -text svneol=native#text/plain
+docs/xml/lcl/replacedlgunit.xml svneol=native#text/plain
 docs/xml/lcl/rubberband.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/shellctrls.xml svneol=native#text/plain
 docs/xml/lcl/spin.xml svneol=LF#text/xml eol=lf
