Docs (LazControls, RTTIControls): added missing punctuation in short descriptions, patch by Don, bug 39018
 SVN 65278@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -4425,7 +4425,7 @@ components/rtticontrols/examples/exampleproject3.lpr svneol=native#text/pascal
 components/rtticontrols/examples/exampleprojectgrid1.lpi svneol=native#text/plain
 components/rtticontrols/examples/exampleprojectgrid1.lpr svneol=native#text/pascal
 components/rtticontrols/fpdoc/rttictrls.xml svneol=native#text/plain
-components/rtticontrols/fpdoc/rttigrids.xml -text svneol=native#text/plain
+components/rtticontrols/fpdoc/rttigrids.xml svneol=native#text/plain
 components/rtticontrols/images-copyright.txt svneol=native#text/plain
 components/rtticontrols/rttictrls.bat svneol=native#text/x-msdos-program
 components/rtticontrols/rttictrls.pas svneol=native#text/pascal
