TAChart/TChartLiveView: Add some comments. Add xml documentation.
 SVN 65453@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -5405,6 +5405,7 @@ components/tachart/fpdoc/descr.lst svneol=native#text/plain
 components/tachart/fpdoc/input.lst svneol=native#text/plain
 components/tachart/fpdoc/tachartaxis.xml svneol=native#text/plain
 components/tachart/fpdoc/tachartaxisutils.xml svneol=native#text/xml
+components/tachart/fpdoc/tachartliveview.xml svneol=native#text/xml
 components/tachart/fpdoc/tachartutils.xml svneol=native#text/plain
 components/tachart/fpdoc/tacustomseries.xml svneol=native#text/plain
 components/tachart/fpdoc/tacustomsource.xml svneol=native#text/xml
