TAChart/LiveView demo: fix typo.
 SVN 65471@trunk

--- a/components/tachart/demo/liveview/liveviewdemo.lpi
+++ b/components/tachart/demo/liveview/liveviewdemo.lpi
@@ -15,7 +15,6 @@
       <XPManifest>
         <DpiAware Value="True"/>
       </XPManifest>
-      <Icon Value="0"/>
     </General>
     <BuildModes Count="1">
       <Item1 Name="Default" Default="True"/>
@@ -43,7 +42,7 @@
       <Unit1>
         <Filename Value="main.pas"/>
         <IsPartOfProject Value="True"/>
-        <ComponentName Value="MainFrom"/>
+        <ComponentName Value="MainForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
       </Unit1>
